<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPersonCard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/titleOutputTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/green"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <LinearLayout
        android:id="@+id/outputDataLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOutputTB"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:id="@+id/outputNameSurnameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/mediumGreen"
            android:padding="4dp">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/surNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:hint="@string/surname"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/addressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_marginVertical="8dp"
            android:background="@color/mediumRed"/>

        <TextView
            android:id="@+id/phoneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textStyle="italic"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:background="@color/mediumYellow"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>